opam-version: "1.2"
name: "i3tools"
version: "0.0.1"
maintainer: "Guillaume Huysmans <ghuysmans99@gmail.com>"
authors: "Guillaume Huysmans <ghuysmans99@gmail.com>"
homepage: "https://github.com/ghuysmans/i3tools/"
bug-reports: "https://github.com/ghuysmans/i3tools/issues"
dev-repo: "git://github.com/ghuysmans/i3tools/"
build: [["dune" "build" "-p" name "-j" jobs]]
synopsis: "Tools for the i3 window manager"
depends: [
  "dune" {build}
  "texttree_notty"
]
